Support all legitimate functional converter test cases